--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>TecNavbar</servlet-name>
-        <servlet-class>servlet.TecNavbar</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>Login</servlet-name>
         <servlet-class>servlet.Login</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ClientNavbar</servlet-name>
         <servlet-class>servlet.ClientNavbar</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>SupNavbar</servlet-name>
-        <servlet-class>servlet.SupNavbar</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Formulario</servlet-name>
@@ -40,10 +32,14 @@
         <servlet-name>GenerarInforme</servlet-name>
         <servlet-class>servlet.GenerarInforme</servlet-class>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>TecNavbar</servlet-name>
-        <url-pattern>/TecNavbar</url-pattern>
-    </servlet-mapping>
+    <servlet>
+        <servlet-name>CerrarSesion</servlet-name>
+        <servlet-class>servlet.CerrarSesion</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>NuevaIncidencia</servlet-name>
+        <servlet-class>servlet.NuevaIncidencia</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -51,10 +47,6 @@
     <servlet-mapping>
         <servlet-name>ClientNavbar</servlet-name>
         <url-pattern>/ClientNavbar</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>SupNavbar</servlet-name>
-        <url-pattern>/SupNavbar</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Formulario</servlet-name>
@@ -80,9 +72,20 @@
         <servlet-name>GenerarInforme</servlet-name>
         <url-pattern>/GenerarInforme</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CerrarSesion</servlet-name>
+        <url-pattern>/CerrarSesion</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NuevaIncidencia</servlet-name>
+        <url-pattern>/NuevaIncidencia</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
